refactor: 优化线程使用方式
1. 替换LocalEventConfiguration、EventRetryTask、TaskService和EdgeTtsUtil中的传统线程池为Executors.newVirtualThreadPerTaskExecutor()
2. 为EdgeTtsUtil添加信号量来限制并发数，保留原有并发控制能力
3. 调整TaskService的销毁逻辑，从shutdownNow改为shutdown
4. 更新相关注释说明，修正文档表述